syntax = "proto3";

package api.common;

option go_package = "github.com/aide-family/moon/pkg/api/common;common";

message MetricItem {
	message Label {
		string key = 1;
		repeated string values = 2;
	}
	string name = 1;
	string help = 2;
	string type = 3;
	repeated Label labels = 4;
	string unit = 5;
	double value = 6;
}

message MetricDatasourceQueryReply {
	repeated MetricQueryResult results = 1;
}

message MetricQueryResult {
	map<string, string> metric = 1;
	MetricQueryResultValue value = 2;
	repeated MetricQueryResultValue values = 3;
}

message MetricQueryResultValue {
	int64 timestamp = 1;
	double value = 2;
}